Fix uneven icons on navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,10 +15,15 @@ i,
 }
 
 .navbar-sm ul {
+  padding-right: 12px;
+}
+
+.navbar-sm ul {
   margin-bottom: 6px;
 }
 
-.navbar-lg .nav-link {
+.navbar-lg .nav-link,
+.navbar-sm .nav-link {
   margin-top: 8px;
 }
 
